--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@
   outline: none;
 }
 
-td, table {
-  border: 1px solid black;
-}
-
 .grid-container {
   display: grid;
 }
@@ -14,7 +10,6 @@ td, table {
 .flex-container {
   display: flex;
 }
-
 
 /* Pop-up add book form */
 #add-book-container {
@@ -46,3 +41,37 @@ input {
   display: none;
   opacity: 0.7;
 }
+
+/* main */
+main {
+  grid-template-rows: 80px 1fr;
+}
+
+/* library display */
+#library-display {
+  justify-self: center;
+  border: 1px solid black;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  width: 70%;
+  max-height: 100vh;
+}
+
+table {
+  border: 1px solid black;
+  width: 100%;
+  text-align: center;
+  border-spacing: 0 20px;
+}
+
+table > td {
+  word-wrap: break-all;
+}
+
+.change-status-btn,
+.remove-book-btn {
+  
+}
+
+
